@@ -246,6 +246,9 @@
 	Fixed 'chaselinks' causing invalid path resolution on going directory
 	up ("..").  Thanks to filterfalse.
 
+	Fixed :mkdir! on absolute paths, used to create relative paths anyway.
+	Thanks to filterfalse.
+
 0.8-beta to 0.8
 
 	Added handling of Ctrl-L to sort dialog.  Thanks to filterfalse.
